--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.15.0",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
   },
