--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.7",
+    "bootstrap-icons": "^1.11.3",
     "dotenv": "^16.4.5",
     "moment": "^2.30.1",
     "react": "^18.3.1",
